--- a/microservice.UnitTests/microservice.UnitTests.csproj
+++ b/microservice.UnitTests/microservice.UnitTests.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\microservice.Core\microservice.Core.csproj" />
+  </ItemGroup>
+
 </Project>
