--- a/microservice.Web.API/appsettings.json
+++ b/microservice.Web.API/appsettings.json
@@ -28,5 +28,8 @@
   },
   "ConnectionStrings": {
     "sqlCon": "Data Source=HAKAM\\SQLEXPRESS;Initial Catalog=UsersContext;Integrated Security=True"
+  },
+  "API": {
+    "sms4free": "https://api.sms4free.co.il/ApiSMS/SendSMS"
   }
 }
